# DifDem_inequalities

./: .gitignore  README.md  environment.yml  pyproject.toml  settings.ini
dementia_inequalities/: _modidx.py  const.py  fetch_spec.json
dementia_inequalities/cli/: core.py  foo.py
dementia_inequalities/core/: 01_first_steps.py  01_look_at_data.py  01_prep_QOF_data.py  01_prep_data.py  02_explore_datasets.py  02_prep_regional_data.py  02b_LAD_GP_intersections.py  02b_prep_geo_data.py  02c_doctors_per_LAD.py  02c_merge_data.py  02d_merge_data_across_LAD.py  03_explore_datasets.py  03b_explore_differential_datasets.py  04_regression_model.py  05_alt_regression_model.py  05b_alt_gaussian_regression_model.py  05c_parameter_optimisation.py  06_comparison_n_geoplots_dementia.py
dementia_inequalities/tools/: foo.py  health_helpers.py
dementia_inequalities/utils/: general.py
nbs/: _quarto.yml  const.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/blog/: dementia_blog.bib  dementia_blog_long.ipynb  dementia_inequalities_long.md
nbs/cli/: cli_01_core.ipynb  cli_02_foo.ipynb
nbs/core/: 01_prep_QOF_data.ipynb  01_prep_data.ipynb  02_explore_datasets.ipynb  02_prep_constituency_data.ipynb  02a_prep_constituency_data.ipynb  02b_LAD_and_GP_intersections.ipynb  02b_LSOA_and_GP_intersections.ipynb  02b_prep_geo_data.ipynb  02c_GP_doctors_per_LAD.ipynb  02c_merge_LAD_QOF.ipynb  02d_merge_LAD_QOF.ipynb  03_explore_datasets.ipynb  03a_explore_datasets.ipynb  03b_explore_differential_diagnosis_datasets.ipynb  04_regression_model.ipynb  04b_regression_model_trained_IMD.ipynb  (+5 more)
(+5 files in other folders)
